<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewInformationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/information_header"
        android:textAlignment="center"
        android:textAppearance="@style/SubheadAppearance"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView_Information"
        android:layout_width="match_parent"
        android:layout_height="@dimen/phaseListHeight"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInformationHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewGeneralInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/general_information_header"
                android:textAppearance="@style/SubheadAppearance"
                android:textStyle="bold" />

            <TextView
                android:textAppearance="@style/SmallTextAppearance"
                android:id="@+id/textViewGeneralInfos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/general_information" />

            <TextView
                android:id="@+id/textViewUseCaseHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/use_case_header"
                android:textAppearance="@style/SubheadAppearance"
                android:textStyle="bold" />

            <TextView
                android:textAppearance="@style/SmallTextAppearance"
                android:id="@+id/textViewUseCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/use_case" />

            <TextView
                android:id="@+id/textViewWarningHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/warning_header"
                android:textAppearance="@style/SubheadAppearance"
                android:textStyle="bold" />

            <TextView
                android:textAppearance="@style/SmallTextAppearance"
                android:id="@+id/textViewWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/warning" />

            <TextView
                android:id="@+id/textViewCredits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/credits_header"
                android:textAppearance="@style/SubheadAppearance"
                android:textStyle="bold" />

            <TextView
                android:textAppearance="@style/SmallTextAppearance"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/credits" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutInfoClose"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonLayoutHeight"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_Information">

        <TextView
            android:id="@+id/textViewInfoClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textAlignment="center"
            android:textAppearance="@style/ButtonTextAppearance"
            android:textColor="@color/colorRed" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>