<?xml version="1.0" encoding="utf-8"?><android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent">    <TextView        android:id="@+id/textViewBPPIERatioHeader"        android:layout_width="@dimen/customTextViewWidth"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:text="I:E-Ratio"        android:textAlignment="textStart"        android:textAppearance="@style/SubheadAppearance"        android:textStyle="bold"        app:layout_constraintBottom_toBottomOf="@+id/spinnerIERatio"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="@+id/spinnerIERatio" />    <View        android:id="@+id/verticalDivider2"        android:layout_width="match_parent"        android:layout_height="2dp"        android:layout_centerHorizontal="true"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="4dp"        android:background="@color/colorPrimary"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/alertListViewPatternPhase" />    <LinearLayout        android:id="@+id/linearLayoutShowFullDuration"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:orientation="vertical"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toEndOf="@+id/textViewBPHeader"        app:layout_constraintTop_toTopOf="parent">        <TextView            android:id="@+id/textViewDurationLabel"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:minWidth="@dimen/customTextViewWidth"            android:text="@string/full_duration"            android:textAlignment="center"            android:textAppearance="@style/SmallTextAppearance" />        <TextView            android:id="@+id/textViewFullDurationValue"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/_00_30"            android:textAlignment="center"            android:textAppearance="@style/Body2Appearance" />        <TextView            android:id="@+id/TextViewDurationUnit"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/mm_ss"            android:textAlignment="center"            android:textAppearance="@style/SmallTextAppearance" />    </LinearLayout>    <View        android:id="@+id/verticalDivider1"        android:layout_width="match_parent"        android:layout_height="2dp"        android:layout_centerHorizontal="true"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:background="@color/colorPrimary"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/linearLayoutShowFullDuration" />    <View        android:id="@+id/verticalDivider3"        android:layout_width="match_parent"        android:layout_height="2dp"        android:layout_centerHorizontal="true"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:background="@color/colorPrimary"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/textViewBPPIERatioHeader" />    <TextView        android:id="@+id/textViewBPHeader"        android:layout_width="@dimen/customTextViewWidth"        android:layout_height="0dp"        android:layout_marginStart="8dp"        android:gravity="start|center_vertical"        android:text="@string/breathing_rhythm"        android:textAlignment="textStart"        android:textAppearance="@style/SubheadAppearance"        android:textStyle="bold"        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutShowFullDuration"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="@+id/linearLayoutShowFullDuration" />    <android.support.constraint.Guideline        android:id="@+id/vMidGuideline"        android:layout_width="0dp"        android:layout_height="0dp"        android:orientation="vertical"        app:layout_constraintGuide_percent="0.5" />    <ListView        android:id="@+id/alertListViewPatternPhase"        android:layout_width="0dp"        android:layout_height="@dimen/phaseListHeight"        android:layout_marginBottom="8dp"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:footerDividersEnabled="false"        android:headerDividersEnabled="false"        app:layout_constraintBottom_toTopOf="@+id/linearLayoutBPCancel"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/textViewBPPhasesHeader"        tools:listitem="@layout/listviewrow_show_phase" />    <LinearLayout        android:id="@+id/linearLayoutBPStart"        android:layout_width="0dp"        android:layout_height="@dimen/buttonLayoutHeight"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:background="?attr/selectableItemBackground"        android:clickable="true"        android:focusable="true"        android:gravity="center"        android:orientation="vertical"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="@+id/vMidGuideline"        app:layout_constraintTop_toTopOf="@+id/linearLayoutBPCancel">        <TextView            android:id="@+id/textViewBPStart"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/start"            android:textAlignment="center"            android:textAppearance="@style/ButtonTextAppearance"            android:textColor="@color/colorPrimary" />    </LinearLayout>    <LinearLayout        android:id="@+id/linearLayoutBPCancel"        android:layout_width="0dp"        android:layout_height="@dimen/buttonLayoutHeight"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:background="?attr/selectableItemBackground"        android:clickable="true"        android:focusable="true"        android:gravity="center"        android:orientation="vertical"        app:layout_constraintEnd_toStartOf="@+id/vMidGuideline"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/verticalDivider2">        <TextView            android:id="@+id/textViewBPCancel"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/cancel"            android:textAlignment="center"            android:textAppearance="@style/ButtonTextAppearance"            android:textColor="@color/colorRed" />    </LinearLayout>    <TextView        android:id="@+id/textViewBPPhasesHeader"        android:layout_width="@dimen/customTextViewWidth"        android:layout_height="wrap_content"        android:layout_marginStart="8dp"        android:text="@string/phases"        android:textAlignment="textStart"        android:textAppearance="@style/SubheadAppearance"        android:textStyle="bold"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/verticalDivider3" />    <Spinner        android:id="@+id/spinnerIERatio"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginEnd="8dp"        android:layout_marginStart="8dp"        android:minHeight="40dp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="@+id/vMidGuideline"        app:layout_constraintTop_toBottomOf="@+id/verticalDivider1" /></android.support.constraint.ConstraintLayout>